force-app/main/default/objects/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_AGR_CASE_CRDR_REV_BDOWN</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_AGR_CASE_CRDR_REV_BDOWN</externalName>
    <label>Forrester_SHIR_AGR_CASE_CRDR_REV_BDOWN</label>
    <pluralLabel>Forrester_SHIR_AGR_CASE_CRDR_REV_BDOWN</pluralLabel>
</CustomObject>