force-app/main/default/objects/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>CASE_RECID</label>
    <length>24</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Forrester_SHIR_AGR_CASE_CRDR_REV_BDOWN</relationshipLabel>
    <relationshipName>Forrester_SHIR_AGR_CASE_CRDR_REV_BDOWN</relationshipName>
    <type>ExternalLookup</type>
</CustomField>