force-app/main/default/objects/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x/fields/COLLECTED_AMT__c.field-meta.xml
<CustomField>
    <fullName>COLLECTED_AMT__c</fullName>
    <description>COLLECTED_AMT</description>
    <externalDeveloperName>COLLECTED_AMT</externalDeveloperName>
    <label>COLLECTED_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>