force-app/main/default/objects/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <description>FY</description>
    <externalDeveloperName>FY</externalDeveloperName>
    <label>FY</label>
    <length>4</length>
    <type>Text</type>
</CustomField>