force-app/main/default/objects/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x/fields/INVOICE_TYPE_ORIGINAL__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE_ORIGINAL__c</fullName>
    <description>INVOICE_TYPE_ORIGINAL</description>
    <externalDeveloperName>INVOICE_TYPE_ORIGINAL</externalDeveloperName>
    <label>INVOICE_TYPE_ORIGINAL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>