force-app/main/default/objects/Forrester_SHIR_AGR_CASE_CRDR_REV_BDOW__x/fields/INVOICE_TYPE_ORIGINAL_DESC__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_TYPE_ORIGINAL_DESC__c</fullName>
    <description>INVOICE_TYPE_ORIGINAL_DESC</description>
    <externalDeveloperName>INVOICE_TYPE_ORIGINAL_DESC</externalDeveloperName>
    <label>INVOICE_TYPE_ORIGINAL_DESC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>